окошки карточек товара

--- a/project pages/zoomagazin.html
+++ b/project pages/zoomagazin.html
@@ -68,7 +68,7 @@
           ></a>
           <img src="../img/-_.svg" class="strela th" />
           <img src="../img/Line 5.svg" class="line" />
-          <a href="" id="openRegistration"
+          <a href="#"
             ><div class="negr">
               Войти
               <img
@@ -96,141 +96,6 @@
               <button class="modal-order-button">Заказать</button>
             </div>
           </div>
-        </div>
-      </div>
-      <div class="mod" id="registrationModal">
-        <div class="mod-content">
-          <span class="clos">&times;</span>
-          <h2>Регистрация</h2>
-          <form id="registrationForm">
-            <div class="input-group">
-              <svg class="icon" xmlns="mail_" viewBox="0 0 37 35">
-                <path
-                  d="M5.9 29C5.1025 29 4.41979 28.7552 3.85187 28.2656C3.28396 27.776 3 27.1875 3 26.5V11.5C3 10.8125 3.28396 10.224 3.85187 9.73438C4.41979 9.24479 5.1025 9 5.9 9H29.1C29.8975 9 30.5802 9.24479 31.1481 9.73438C31.716 10.224 32 10.8125 32 11.5V26.5C32 27.1875 31.716 27.776 31.1481 28.2656C30.5802 28.7552 29.8975 29 29.1 29H5.9ZM17.5 20.25L5.9 14V26.5H29.1V14L17.5 20.25ZM17.5 17.75L29.1 11.5H5.9L17.5 17.75ZM5.9 14V11.5V26.5V14Z"
-                  fill="#949494"
-                />
-              </svg>
-              <input type="email" id="email" placeholder="Почта" required />
-            </div>
-            <div class="input-group">
-              <svg
-                class="icon"
-                xmlns="http://www.w3.org/2000/svg"
-                viewBox="0 0 41 33"
-              >
-                <path
-                  d="M34.0812 28.875C30.5222 28.875 27.0059 28.2505 23.5323 27.0016C20.0587 25.7526 16.8983 23.9823 14.051 21.6906C11.2038 19.399 9.00434 16.8552 7.4526 14.0594C5.90087 11.2635 5.125 8.43333 5.125 5.56875C5.125 5.15625 5.29583 4.8125 5.6375 4.5375C5.97917 4.2625 6.40625 4.125 6.91875 4.125H13.8375C14.2361 4.125 14.592 4.23385 14.9052 4.45156C15.2184 4.66927 15.4035 4.92708 15.4604 5.225L16.5708 10.0375C16.6278 10.4042 16.6135 10.7135 16.5281 10.9656C16.4427 11.2177 16.2861 11.4354 16.0583 11.6188L11.9156 14.9875C12.4851 15.8354 13.1613 16.6547 13.9443 17.4453C14.7273 18.2359 15.5885 18.9979 16.5281 19.7313C17.4108 20.4417 18.3361 21.1005 19.3042 21.7078C20.2722 22.3151 21.2972 22.8708 22.3792 23.375L26.3937 20.1438C26.65 19.9375 26.9845 19.7828 27.3974 19.6797C27.8102 19.5766 28.216 19.5479 28.6146 19.5938L34.5083 20.5562C34.9069 20.6479 35.2344 20.8141 35.4906 21.0547C35.7469 21.2953 35.875 21.5646 35.875 21.8625V27.4312C35.875 27.8438 35.7042 28.1875 35.3625 28.4625C35.0208 28.7375 34.5938 28.875 34.0812 28.875ZM10.2927 12.375L13.1115 10.1063L12.3854 6.875H8.58437C8.72674 7.81458 8.92604 8.74271 9.18229 9.65938C9.43854 10.576 9.80868 11.4813 10.2927 12.375ZM25.5823 24.6812C26.6927 25.0708 27.8245 25.3802 28.9776 25.6094C30.1307 25.8385 31.291 25.9875 32.4583 26.0562V23.0312L28.4438 22.3781L25.5823 24.6812Z"
-                  fill="#949494"
-                />
-              </svg>
-              <input type="tel" id="phone" placeholder="Телефон" required />
-            </div>
-            <div class="input-group">
-              <svg
-                class="icon"
-                xmlns="http://www.w3.org/2000/svg"
-                viewBox="0 0 36 35"
-              >
-                <path
-                  d="M18 17.5002C16.35 17.5002 14.9375 16.929 13.7625 15.7866C12.5875 14.6443 12 13.271 12 11.6668C12 10.0627 12.5875 8.6894 13.7625 7.54704C14.9375 6.40468 16.35 5.8335 18 5.8335C19.65 5.8335 21.0625 6.40468 22.2375 7.54704C23.4125 8.6894 24 10.0627 24 11.6668C24 13.271 23.4125 14.6443 22.2375 15.7866C21.0625 16.929 19.65 17.5002 18 17.5002ZM6 29.1668V25.0835C6 24.2571 6.21875 23.4976 6.65625 22.8049C7.09375 22.1121 7.675 21.5835 8.4 21.2189C9.95 20.4654 11.525 19.9003 13.125 19.5236C14.725 19.1469 16.35 18.9585 18 18.9585C19.65 18.9585 21.275 19.1469 22.875 19.5236C24.475 19.9003 26.05 20.4654 27.6 21.2189C28.325 21.5835 28.9062 22.1121 29.3438 22.8049C29.7813 23.4976 30 24.2571 30 25.0835V29.1668H6ZM9 26.2502H27V25.0835C27 24.8161 26.9313 24.5731 26.7938 24.3543C26.6562 24.1356 26.475 23.9654 26.25 23.8439C24.9 23.1877 23.5375 22.6955 22.1625 22.3674C20.7875 22.0392 19.4 21.8752 18 21.8752C16.6 21.8752 15.2125 22.0392 13.8375 22.3674C12.4625 22.6955 11.1 23.1877 9.75 23.8439C9.525 23.9654 9.34375 24.1356 9.20625 24.3543C9.06875 24.5731 9 24.8161 9 25.0835V26.2502ZM18 14.5835C18.825 14.5835 19.5313 14.2979 20.1188 13.7267C20.7063 13.1555 21 12.4689 21 11.6668C21 10.8647 20.7063 10.1781 20.1188 9.60693C19.5313 9.03575 18.825 8.75016 18 8.75016C17.175 8.75016 16.4688 9.03575 15.8813 9.60693C15.2938 10.1781 15 10.8647 15 11.6668C15 12.4689 15.2938 13.1555 15.8813 13.7267C16.4688 14.2979 17.175 14.5835 18 14.5835Z"
-                  fill="#949494"
-                />
-              </svg>
-              <input type="text" id="regLogin" placeholder="Логин" required />
-            </div>
-            <div class="input-group">
-              <svg
-                class="icon"
-                xmlns="http://www.w3.org/2000/svg"
-                viewBox="0 0 35 32"
-              >
-                <path
-                  d="M8.75016 29.3335C7.94808 29.3335 7.26145 29.0724 6.69027 28.5502C6.11909 28.0279 5.8335 27.4002 5.8335 26.6668V13.3335C5.8335 12.6002 6.11909 11.9724 6.69027 11.4502C7.26145 10.9279 7.94808 10.6668 8.75016 10.6668H10.2085V8.00016C10.2085 6.15572 10.9194 4.5835 12.3413 3.2835C13.7632 1.9835 15.4828 1.3335 17.5002 1.3335C19.5175 1.3335 21.2371 1.9835 22.659 3.2835C24.0809 4.5835 24.7918 6.15572 24.7918 8.00016V10.6668H26.2502C27.0522 10.6668 27.7389 10.9279 28.3101 11.4502C28.8812 11.9724 29.1668 12.6002 29.1668 13.3335V26.6668C29.1668 27.4002 28.8812 28.0279 28.3101 28.5502C27.7389 29.0724 27.0522 29.3335 26.2502 29.3335H8.75016ZM8.75016 26.6668H26.2502V13.3335H8.75016V26.6668ZM17.5002 22.6668C18.3022 22.6668 18.9889 22.4057 19.5601 21.8835C20.1312 21.3613 20.4168 20.7335 20.4168 20.0002C20.4168 19.2668 20.1312 18.6391 19.5601 18.1168C18.9889 17.5946 18.3022 17.3335 17.5002 17.3335C16.6981 17.3335 16.0114 17.5946 15.4403 18.1168C14.8691 18.6391 14.5835 19.2668 14.5835 20.0002C14.5835 20.7335 14.8691 21.3613 15.4403 21.8835C16.0114 22.4057 16.6981 22.6668 17.5002 22.6668ZM13.1252 10.6668H21.8752V8.00016C21.8752 6.88905 21.4498 5.94461 20.5991 5.16683C19.7484 4.38905 18.7154 4.00016 17.5002 4.00016C16.2849 4.00016 15.2519 4.38905 14.4012 5.16683C13.5505 5.94461 13.1252 6.88905 13.1252 8.00016V10.6668Z"
-                  fill="#949494"
-                />
-              </svg>
-              <input
-                type="password"
-                id="regPassword"
-                placeholder="Пароль"
-                required
-              />
-            </div>
-            <div class="input-group">
-              <svg
-                class="icon"
-                xmlns="http://www.w3.org/2000/svg"
-                viewBox="0 0 35 32"
-              >
-                <path
-                  d="M8.75016 29.3335C7.94808 29.3335 7.26145 29.0724 6.69027 28.5502C6.11909 28.0279 5.8335 27.4002 5.8335 26.6668V13.3335C5.8335 12.6002 6.11909 11.9724 6.69027 11.4502C7.26145 10.9279 7.94808 10.6668 8.75016 10.6668H10.2085V8.00016C10.2085 6.15572 10.9194 4.5835 12.3413 3.2835C13.7632 1.9835 15.4828 1.3335 17.5002 1.3335C19.5175 1.3335 21.2371 1.9835 22.659 3.2835C24.0809 4.5835 24.7918 6.15572 24.7918 8.00016V10.6668H26.2502C27.0522 10.6668 27.7389 10.9279 28.3101 11.4502C28.8812 11.9724 29.1668 12.6002 29.1668 13.3335V26.6668C29.1668 27.4002 28.8812 28.0279 28.3101 28.5502C27.7389 29.0724 27.0522 29.3335 26.2502 29.3335H8.75016ZM8.75016 26.6668H26.2502V13.3335H8.75016V26.6668ZM17.5002 22.6668C18.3022 22.6668 18.9889 22.4057 19.5601 21.8835C20.1312 21.3613 20.4168 20.7335 20.4168 20.0002C20.4168 19.2668 20.1312 18.6391 19.5601 18.1168C18.9889 17.5946 18.3022 17.3335 17.5002 17.3335C16.6981 17.3335 16.0114 17.5946 15.4403 18.1168C14.8691 18.6391 14.5835 19.2668 14.5835 20.0002C14.5835 20.7335 14.8691 21.3613 15.4403 21.8835C16.0114 22.4057 16.6981 22.6668 17.5002 22.6668ZM13.1252 10.6668H21.8752V8.00016C21.8752 6.88905 21.4498 5.94461 20.5991 5.16683C19.7484 4.38905 18.7154 4.00016 17.5002 4.00016C16.2849 4.00016 15.2519 4.38905 14.4012 5.16683C13.5505 5.94461 13.1252 6.88905 13.1252 8.00016V10.6668Z"
-                  fill="#949494"
-                />
-              </svg>
-              <input
-                type="password"
-                id="confirmPassword"
-                placeholder="Повторите пароль"
-                required
-              />
-            </div>
-            <button type="submit" class="submit-button" id="btn">
-              Зарегистрироваться
-            </button>
-            <p style="display: inline">
-              или
-              <a href="#" class="switch-link" onclick="switchToLogin()"
-                >Войти</a
-              >
-            </p>
-          </form>
-        </div>
-      </div>
-
-      <div class="mod" id="loginModal">
-        <div class="mod-content">
-          <span class="clos">&times;</span>
-          <h2>Авторизация</h2>
-          <form id="loginForm">
-            <div class="input-group">
-              <svg
-                class="icon"
-                xmlns="http://www.w3.org/2000/svg"
-                viewBox="0 0 36 35"
-              >
-                <path
-                  d="M18 17.5002C16.35 17.5002 14.9375 16.929 13.7625 15.7866C12.5875 14.6443 12 13.271 12 11.6668C12 10.0627 12.5875 8.6894 13.7625 7.54704C14.9375 6.40468 16.35 5.8335 18 5.8335C19.65 5.8335 21.0625 6.40468 22.2375 7.54704C23.4125 8.6894 24 10.0627 24 11.6668C24 13.271 23.4125 14.6443 22.2375 15.7866C21.0625 16.929 19.65 17.5002 18 17.5002ZM6 29.1668V25.0835C6 24.2571 6.21875 23.4976 6.65625 22.8049C7.09375 22.1121 7.675 21.5835 8.4 21.2189C9.95 20.4654 11.525 19.9003 13.125 19.5236C14.725 19.1469 16.35 18.9585 18 18.9585C19.65 18.9585 21.275 19.1469 22.875 19.5236C24.475 19.9003 26.05 20.4654 27.6 21.2189C28.325 21.5835 28.9062 22.1121 29.3438 22.8049C29.7813 23.4976 30 24.2571 30 25.0835V29.1668H6ZM9 26.2502H27V25.0835C27 24.8161 26.9313 24.5731 26.7938 24.3543C26.6562 24.1356 26.475 23.9654 26.25 23.8439C24.9 23.1877 23.5375 22.6955 22.1625 22.3674C20.7875 22.0392 19.4 21.8752 18 21.8752C16.6 21.8752 15.2125 22.0392 13.8375 22.3674C12.4625 22.6955 11.1 23.1877 9.75 23.8439C9.525 23.9654 9.34375 24.1356 9.20625 24.3543C9.06875 24.5731 9 24.8161 9 25.0835V26.2502ZM18 14.5835C18.825 14.5835 19.5313 14.2979 20.1188 13.7267C20.7063 13.1555 21 12.4689 21 11.6668C21 10.8647 20.7063 10.1781 20.1188 9.60693C19.5313 9.03575 18.825 8.75016 18 8.75016C17.175 8.75016 16.4688 9.03575 15.8813 9.60693C15.2938 10.1781 15 10.8647 15 11.6668C15 12.4689 15.2938 13.1555 15.8813 13.7267C16.4688 14.2979 17.175 14.5835 18 14.5835Z"
-                  fill="#949494"
-                />
-              </svg>
-              <input type="text" id="login" placeholder="Логин" required />
-            </div>
-            <div class="input-group">
-              <svg
-                class="icon"
-                xmlns="http://www.w3.org/2000/svg"
-                viewBox="0 0 35 32"
-              >
-                <path
-                  d="M8.75016 29.3335C7.94808 29.3335 7.26145 29.0724 6.69027 28.5502C6.11909 28.0279 5.8335 27.4002 5.8335 26.6668V13.3335C5.8335 12.6002 6.11909 11.9724 6.69027 11.4502C7.26145 10.9279 7.94808 10.6668 8.75016 10.6668H10.2085V8.00016C10.2085 6.15572 10.9194 4.5835 12.3413 3.2835C13.7632 1.9835 15.4828 1.3335 17.5002 1.3335C19.5175 1.3335 21.2371 1.9835 22.659 3.2835C24.0809 4.5835 24.7918 6.15572 24.7918 8.00016V10.6668H26.2502C27.0522 10.6668 27.7389 10.9279 28.3101 11.4502C28.8812 11.9724 29.1668 12.6002 29.1668 13.3335V26.6668C29.1668 27.4002 28.8812 28.0279 28.3101 28.5502C27.7389 29.0724 27.0522 29.3335 26.2502 29.3335H8.75016ZM8.75016 26.6668H26.2502V13.3335H8.75016V26.6668ZM17.5002 22.6668C18.3022 22.6668 18.9889 22.4057 19.5601 21.8835C20.1312 21.3613 20.4168 20.7335 20.4168 20.0002C20.4168 19.2668 20.1312 18.6391 19.5601 18.1168C18.9889 17.5946 18.3022 17.3335 17.5002 17.3335C16.6981 17.3335 16.0114 17.5946 15.4403 18.1168C14.8691 18.6391 14.5835 19.2668 14.5835 20.0002C14.5835 20.7335 14.8691 21.3613 15.4403 21.8835C16.0114 22.4057 16.6981 22.6668 17.5002 22.6668ZM13.1252 10.6668H21.8752V8.00016C21.8752 6.88905 21.4498 5.94461 20.5991 5.16683C19.7484 4.38905 18.7154 4.00016 17.5002 4.00016C16.2849 4.00016 15.2519 4.38905 14.4012 5.16683C13.5505 5.94461 13.1252 6.88905 13.1252 8.00016V10.6668Z"
-                  fill="#949494"
-                />
-              </svg>
-              <input
-                type="password"
-                id="password"
-                placeholder="Пароль"
-                required
-              />
-            </div>
-            <button type="submit" class="submit-button" id="btn">Войти</button>
-            <p style="display: inline">
-              или
-              <a href="#" class="switch-link" onclick="switchToRegistration()"
-                >Зарегистрироваться</a
-              >
-            </p>
-          </form>
         </div>
       </div>
     </main>
@@ -411,19 +276,21 @@
 
       function createProductCard(product) {
         return `
-              <div class="product-wrapper" data-product-id="${product.id}">
-                <div class="card">
-                  <button class="love"><img src="../img/favorite.svg"></button>
-                  <img src="${product.image}" alt="${
+            <div class="product-wrapper" data-product-id="${product.id}">
+            <div class="card">
+                <button class="love"><img src="../img/favorite.svg"></button>
+                <img src="${product.image}" alt="${
           product.name
         }" loading="lazy">
-                  <h3>${product.name}</h3>
-                  <p class="descr">${product.description}</p>
-                  <div class="price">${formatPrice(product.price)}</div>
-                  <button class="btn">Заказать</button>
+                <div class="text-block">
+                <h3>${product.name}</h3>
+                <p class="descr">${product.description}</p>
+                <div class="price">${formatPrice(product.price)}</div>
                 </div>
-              </div>
-              `;
+                <button class="btn">Заказать</button>
+            </div>
+            </div>
+        `;
       }
 
       function createScrollbar(category) {
@@ -439,10 +306,13 @@
           })
           .join("");
         document.getElementById("productContainer").innerHTML = productHTML;
-        const productWrappers = document.querySelectorAll(".product-wrapper");
-        productWrappers.forEach((wrapper) => {
-          wrapper.addEventListener("click", () => {
-            const productId = parseInt(wrapper.dataset.productId);
+
+        const textBlocks = document.querySelectorAll(".text-block");
+        textBlocks.forEach((block) => {
+          block.addEventListener("click", () => {
+            const productId = parseInt(
+              block.closest(".product-wrapper").dataset.productId
+            );
             openModal(productId);
           });
         });
@@ -503,105 +373,6 @@
       //корзина
 
       //авторизация регистрация
-      document.addEventListener("DOMContentLoaded", function () {
-        const registrationModal = document.getElementById("registrationModal");
-        const loginModal = document.getElementById("loginModal");
-        const openRegistrationButton =
-          document.getElementById("openRegistration");
-        const openLoginButton = document.getElementById("openLogin");
-        const closeButtons = document.querySelectorAll(".clos");
-        const registrationForm = document.getElementById("registrationForm");
-        const loginForm = document.getElementById("loginForm");
-
-        // Открытие модальных окон
-        openRegistrationButton.addEventListener("click", function () {
-          registrationModal.style.display = "block";
-        });
-
-        openLoginButton.addEventListener("click", function () {
-          loginModal.style.display = "block";
-        });
-
-        // Закрытие модальных окон
-        closeButtons.forEach(function (button) {
-          button.addEventListener("click", function () {
-            registrationModal.style.display = "none";
-            loginModal.style.display = "none";
-          });
-        });
-
-        // Валидация формы регистрации
-        registrationForm.addEventListener("submit", function (event) {
-          let isValid = true;
-          const email = document.getElementById("email").value;
-          const phone = document.getElementById("phone").value;
-          const regLogin = document.getElementById("regLogin").value;
-          const regPassword = document.getElementById("regPassword").value;
-          const confirmPassword =
-            document.getElementById("confirmPassword").value;
-
-          // Проверка email
-          if (!validateEmail(email)) {
-            alert("Пожалуйста, введите корректный email.");
-            isValid = false;
-          }
-
-          // Проверка телефона (простая)
-          if (phone.length < 10) {
-            alert("Пожалуйста, введите корректный номер телефона.");
-            isValid = false;
-          }
-
-          // Проверка пароля (минимум 8 символов)
-          if (regPassword.length < 8) {
-            alert("Пароль должен содержать не менее 8 символов.");
-            isValid = false;
-          }
-
-          // Проверка совпадения паролей
-          if (regPassword !== confirmPassword) {
-            alert("Пароли не совпадают.");
-            isValid = false;
-          }
-
-          if (!isValid) {
-            event.preventDefault(); // Предотвращаем отправку формы, если есть ошибки
-          } else {
-            isValid = true;
-            alert("Вы зарегистрированы!");
-          }
-        });
-
-        // Валидация формы авторизации (базовая)
-        loginForm.addEventListener("submit", function (event) {
-          const login = document.getElementById("login").value;
-          const password = document.getElementById("password").value;
-
-          // Здесь можно добавить проверку логина и пароля
-          if (!login || !password) {
-            alert("Пожалуйста, введите логин и пароль.");
-            event.preventDefault();
-          } else {
-            alert("Вы вошли в аккаунт!");
-          }
-        });
-
-        // Функция для валидации email
-        function validateEmail(email) {
-          const re = /^[^\s@]+@[^\s@]+\.[^\s@]+$/;
-          return re.test(String(email).toLowerCase());
-        }
-      });
-
-      function switchToLogin() {
-        document.getElementById("registrationModal").style.display = "none";
-        document.getElementById("loginModal").style.display = "block";
-      }
-
-      function switchToRegistration() {
-        document.getElementById("loginModal").style.display = "none";
-        document.getElementById("registrationModal").style.display = "block";
-      }
     </script>
   </body>
 </html>
