--- a/project pages/zoomagazin.html
+++ b/project pages/zoomagazin.html
@@ -30,7 +30,9 @@
           ><div class="cerb">Корзина <img src="../img/Vector (1).svg" /></div
         ></a>
         <a href="#" id="openRegistration"
-          ><div class="cerb">
+          >
+          <a href="#" id="openLogin">
+          <div class="cerb">
             Войти
             <img
               src="../img/account_circle_24dp_FFFFFF_FILL0_wght400_GRAD0_opsz24 1.svg"
@@ -654,7 +656,7 @@
         const loginModal = document.getElementById("loginModal");
         const openRegistrationButton =
           document.getElementById("openRegistration");
-        const openLoginButton = document.getElementById("openLogin");
+        const openLoginButton = document.getElementById("openLogin"); // Добавляем эту строку
         const closeButtons = document.querySelectorAll(".clos");
         const registrationForm = document.getElementById("registrationForm");
         const loginForm = document.getElementById("loginForm");
@@ -674,6 +676,15 @@
             registrationModal.style.display = "none";
             loginModal.style.display = "none";
           });
+        });
+
+        window.addEventListener("click", function (event) {
+            if (event.target == registrationModal) {
+                registrationModal.style.display = "none";
+            }
+            if (event.target == loginModal) {
+                loginModal.style.display = "none";
+            }
         });
 
         // Валидация формы регистрации
